Fixed the issue with overflow

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,10 @@
+
+
+#main-content {
+    margin-top: 50px;
+    margin-left: 270px;
+}
+
 /* style for expanded image */
 .expandedImage {
     width: 100%;
