--- a/app/styles/nav.css
+++ b/app/styles/nav.css
@@ -2,14 +2,17 @@
     position: fixed;
 }
 
-#main-content {
-    margin-left: 250px;
+.main-navbar>div>ul {
+    overflow: auto;
+    height: 100%;
 }
 
-.main-navbar {
+.main-navbar>div>ul {
+    padding-top: 50px;
+    /*padding-bottom: 60px;*/
     padding-left: 20px;
-    margin-top: 60px;
-    margin-bottom: 20px;
+
+    /*margin-top: 50px;*/
 }
 
 .main-navbar .nav>li>a {
